Fixed add admin modal color for dark mode
Fixed add admin modal color for dark mode

--- a/react-frontend/internship-api-frontend/src/pages/admin/AdminPage.css
+++ b/react-frontend/internship-api-frontend/src/pages/admin/AdminPage.css
@@ -5,3 +5,11 @@
   margin-top: 2.5%;
 
 }
+
+.modal-content{
+  background:var(--background-color);
+ 
+}
+.modal-content form input{
+  color:black;
+}
